--- a/configs/app.toml
+++ b/configs/app.toml
@@ -6,5 +6,5 @@ log_level = "debug"
 host = "localhost"
 port = "5432"
 user = "postgres"
-dbname = "chat_db"
+dbname = "meem_db"
 sslmode = "disable"
